# FastAPI-JWTAuth

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py  requirements.txt  schema.py
src/routers/: authentication.py
src/utils/: auth.py  email.py  password.py
